--- a/Datonate/templates/viewexp.html
+++ b/Datonate/templates/viewexp.html
@@ -58,14 +58,15 @@
             <div class="container-fluid">
                 <h2>Experiments</h2>
                 <br>
-                <table class="table table-striped">
+                <table class="table table-striped" style="table-layout: fixed;">
                     <thead>
                       <tr>
                         <th>#</th>
                         <th>Description</th>
                         <th>Price per batch</th>
                         <th>Progress</th>
-                        <th width="10%">Pause/Resume</th>
+                        <th>Status</th>
+                        <th>Resume/Pause</th>
                         <th>Rate Batch</th>
                         <th>Update Experiment</th>
                     </tr>
@@ -85,7 +86,9 @@
                       </div>
                   </div>
               </td>
-              <td><button type="button" class="btn btn-default">Pause</button></td>
+              <td>{{ i['status'] }}</td>
+
+              <td><a href="/viewexp/{{ i['experiment_id'] }}"><button type="button" class="btn btn-default">Toggle</button></a></td>
               <td><a href="/rateBatch/{{ i['experiment_id'] }}"><button type="button" class="btn btn-default">Rate</button></a></td>
               <td><a href="/updateExp/{{ i['experiment_id'] }}"><button type="button" class="btn btn-default">Update</button></a></td>
           </tr>
